<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.upload.UploadActivity"
    android:padding="16dp"
    android:theme="@style/Theme.StoryDicoding">

    <TextView
        android:layout_marginTop="32dp"
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_story"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        android:layout_marginTop="16dp"/>


    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_img"
        app:srcCompat="@drawable/ic_baseline_image_24"
        android:layout_marginTop="4dp"/>

    <Button
        android:id="@+id/bt_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/kamera"
        android:backgroundTint="?attr/colorAccent"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView"
        app:layout_constraintEnd_toStartOf="@id/bt_gallery"
        android:layout_marginEnd="4dp"/>

    <Button
        android:id="@+id/bt_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/galeri"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/bt_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_camera"
        app:layout_constraintTop_toTopOf="@+id/bt_camera" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/deskripsi"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_camera" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DescriptionEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_upload_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text|textMultiLine"
            android:layout_gravity="top"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unggah"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorPrimary"
        android:backgroundTint="?attr/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionEditTextLayout"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>